# medscope

./: BONE-1.new.stl  BONE-1.real.stl  README.md  pyproject.toml
medscope/: ImageWrap.py  __init__.py  main.py
