[project]
name = "medscope"
version = "0.1.12"
description = "Medical Intraoperative Real-time Visualization System."
authors = [
    {name = "GGN_2015",email = "neko@jlulug.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy",
    "pyqt5",
    "vtk"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
